--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,11 @@
   <groupId>mygroupid</groupId>
   <artifactId>myartifactid</artifactId>
   <version>0.0-SNAPSHOT</version>
-  <dependencies>
+    <packaging>pom</packaging>
+    <modules>
+        <module>lib</module>
+    </modules>
+    <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
