--- a/pom.xml
+++ b/pom.xml
@@ -3,16 +3,45 @@
   <groupId>mygroupid</groupId>
   <artifactId>myartifactid</artifactId>
   <version>0.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>lib</module>
-    </modules>
-    <dependencies>
+  <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
       <type>jar</type>
     </dependency>
+    <dependency>
+      <groupId>org.netbeans.external</groupId>
+      <artifactId>com-google-gson</artifactId>
+      <version>RELEASE113</version>
+      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson-parent</artifactId>
+      <version>2.11.0</version>
+      <type>pom</type>
+    </dependency>
+    <dependency>
+      <groupId>com.jayway.jsonpath</groupId>
+      <artifactId>json-path-parent</artifactId>
+      <version>1.1.0</version>
+      <type>pom</type>
+    </dependency>
+    <dependency>
+      <groupId>org.wso2.orbit.com.jayway.jsonpath</groupId>
+      <artifactId>json-path</artifactId>
+      <version>2.9.0.wso2v1</version>
+      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.ecf</groupId>
+      <artifactId>org.json</artifactId>
+      <version>1.0.0.v201011060100</version>
+      <type>jar</type>
+    </dependency>
   </dependencies>
+  <build>
+    <plugins></plugins>
+  </build>
 </project>
