--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <modules>
         <module>lib</module>
     </modules>
+  <properties>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+  </properties>
     <dependencies>
     <dependency>
       <groupId>junit</groupId>
