--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,16 @@
       <artifactId>kotlin-stdlib</artifactId>
       <version>1.3.72</version> <!-- Use the version compatible with your Kotlin runtime -->
     </dependency>
-
+    <dependency>
+      <groupId>com.jayway.jsonpath</groupId>
+      <artifactId>json-path</artifactId>
+      <version>2.6.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.11.0</version>
+    </dependency>
     </dependencies>
 
   <!-- Make sure to have jitpack.io in your list of repositories -->
